# partydeck

./: Cargo.toml  README.md
src/: cli.rs  handler.rs  input.rs  launch.rs  main.rs  util.rs
src/app/: app.rs  app_pages.rs  app_panels.rs  mod.rs
