[package]
name = "partydeck"
version = "0.8.5"
edition = "2024"

[features]
default = []
download_deps = ["dep:reqwest", "dep:serde_json", "dep:tar", "dep:bzip2", "dep:sevenz-rust2", "dep:sha2"]
download_deps_latest = ["download_deps"]
build_gamescope = []

[dependencies]
eframe = { version = "0.32.1", features = ["x11", "wayland", "accesskit", "default_fonts", "glow"], default-features = false}
egui_extras = { version = "0.32.1", features = ["file", "image"], default-features = false }
evdev = "=0.13.0"
fastrand = "2.3.0"
image = { version = "0.25.8", features = ["jpeg", "png"], default-features = false }
minreq = { version = "3.0.0", features = ["https-rustls"] }
rfd = "0.15.3"
serde = "1.0.219"
serde_json = "1.0.140"
x11rb = { version = "0.13.1", default-features = false }
zbus = { version = "5.5.0", features = ["async-io", "blocking-api"], default-features = false }
steamlocate = "2.0.1"
zip = { version = "5.1.1", features = ["deflate", "deflate64"], default-features = false }
pathsearch = "0.2.0"

[build-dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"], optional = true }
serde_json = { version = "1.0.140", optional = true }
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.6.1", optional = true }
sevenz-rust2 = { version = "0.20.2", features = ["util"], default-features = false, optional = true }
sha2 = { version = "0.10.9", optional = true}
